        o 'ReadPlot_results': updated description of the 'dp3D.names' argument    
        o 'plot_out'        : 'main' argument is not overritten to "Observed vs 'best' Simulation" when this argument is provided and 'ptype=="ts"'
        o 'plot_results'    : 'main' argument is now (internally) passed to the 'plot_out' function.

0.3-0	19-Dec-2012
        o 'hydroPSO'    : -) parallel capable (OS-independent)
                             * new argument 'parallel' to define how to parallelise the evaluation of the objective function
                             * new 'control' argument 'par.nnodes'  to define the number of cores/nodes to be used in a multi-core machine or 
                               network cluster
                             * new 'control' argument 'par.pkgs' (only needed for Windows machines) with the list of package that need to be 
                               loaded on each core/node 
                          -) Default number of particles for 'method=spso2007' was changed  from 'ceiling(10+2*sqrt(n))' to 'floor(10+2*sqrt(n))', following Clerc 2012

        o New vignette (14/Dec/2012)
                             
        o 'read_out'    : -) new argument 'nsim' used to specify the number of model outputs. It is useful when the model to be calibrated returns NA
                             instead of the simulated values for some particles (e.g., MODFLOW)
                           
        o 'read_results': -) See 'read_out' above

        o 'plot_results': -) See 'read_out' above
                      
                           
0.2-0	29-Nov-2012
        o 'hydroPSO'  : -) SPSO 2011 capable, which includes: (check the latest \url{clerc.maurice.free.fr/pso/SPSO_descriptions.pdf})
                           * new default value for swarm size (npart=40),
                           * new equation for updating the velocity ( V[t+1] = w*V + Gr -x + alea_sphere(Gr, ||Gr-x||) ), 